dmp 1253 code coverage